- Create part of base infrastructure for plug-in system - Add part of base settings for Elysium Platform project - Update output assemblies names - Update namespace of Elysium Theme for WPF project

--- a/Source code/Theme/Themes/Generic.xaml
+++ b/Source code/Theme/Themes/Generic.xaml
@@ -3,38 +3,38 @@
     
     <ResourceDictionary.MergedDictionaries>
         
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
         
-        <ResourceDictionary Source="/Theme;component/Themes/Buttons/Button.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Buttons/RepeatButton.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Buttons/ToggleButton.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Buttons/Button.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Buttons/RepeatButton.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Buttons/ToggleButton.xaml"/>
         
-        <ResourceDictionary Source="/Theme;component/Themes/Buttons/CommandButton.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Buttons/RepeatCommandButton.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Buttons/ToggleCommandButton.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Buttons/CommandButton.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Buttons/RepeatCommandButton.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Buttons/ToggleCommandButton.xaml"/>
         
-        <ResourceDictionary Source="/Theme;component/Themes/Buttons/CheckBox.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Buttons/RadioButton.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Buttons/CheckBox.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Buttons/RadioButton.xaml"/>
         
-        <ResourceDictionary Source="/Theme;component/Themes/TextBoxes/TextBox.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/TextBoxes/PasswordBox.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/TextBoxes/RichTextBox.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/TextBoxes/TextBox.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/TextBoxes/PasswordBox.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/TextBoxes/RichTextBox.xaml"/>
         
-        <ResourceDictionary Source="/Theme;component/Themes/Scrolls/ScrollBar.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Scrolls/ScrollViewer.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Scrolls/ScrollBar.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Scrolls/ScrollViewer.xaml"/>
         
-        <ResourceDictionary Source="/Theme;component/Themes/Ranges/Slider.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Ranges/ProgressBar.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Ranges/Slider.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Ranges/ProgressBar.xaml"/>
         
-        <ResourceDictionary Source="/Theme;component/Themes/Selectors/ListBox.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Selectors/ListBoxItem.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Selectors/ComboBox.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Selectors/ComboBoxItem.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Selectors/ListBox.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Selectors/ListBoxItem.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Selectors/ComboBox.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Selectors/ComboBoxItem.xaml"/>
 
-        <ResourceDictionary Source="/Theme;component/Themes/Menus/ContextMenu.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Menus/MenuItem.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Menus/ContextMenu.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Menus/MenuItem.xaml"/>
         
-        <ResourceDictionary Source="/Theme;component/Themes/Windows/Window.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Windows/Window.xaml"/>
         
     </ResourceDictionary.MergedDictionaries>
     
