--- a/Source code/Theme.Test/MainWindow.xaml
+++ b/Source code/Theme.Test/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<InternalControls:Window x:Class="Elysium.Theme.Test.MainWindow"
-						 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-						 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-						 xmlns:InternalControls="clr-namespace:Elysium.Theme.Controls;assembly=Theme"
-						 Title="MainWindow"
-						 Background="{StaticResource Background}"
-						 MouseLeftButtonDown="WindowMouseLeftButtonDown"
-						 Width="1000" Height="600">
+﻿<Controls:Window x:Class="Elysium.Theme.WPF.Test.MainWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:Controls="clr-namespace:Elysium.Theme.WPF.Controls;assembly=Elysium.Theme.WPF"
+                 Title="MainWindow"
+                 Background="{StaticResource Background}"
+                 MouseLeftButtonDown="WindowMouseLeftButtonDown"
+                 Width="1000" Height="600">
 	<Grid Background="{StaticResource Transparent}">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="125"/>
@@ -57,16 +57,16 @@
 					  Grid.Row="2"
 					  Margin="15"
 					  Content="ToggleButton"/>
-		<InternalControls:CommandButton Grid.Column="0"
-										Grid.Row="3"
-										HorizontalAlignment="Center"
-										Width="30" Height="30">
+		<Controls:CommandButton Grid.Column="0"
+                                Grid.Row="3"
+                                HorizontalAlignment="Center"
+                                Width="30" Height="30">
 			<Grid Background="Transparent">
 				<Path Data="M 7,0 L 7,14 M 0,7 L 14,7"
 					  Stroke="Black"
 					  StrokeThickness="2.5"/>
 			</Grid>
-		</InternalControls:CommandButton>
+		</Controls:CommandButton>
 		<CheckBox Grid.Column="0"
 				  Grid.Row="4"
 				  Margin="10"
@@ -147,17 +147,17 @@
 				Minimum="0" Value="50" Maximum="100"
 				Margin="15"
 				HorizontalAlignment="Center"/>
-		<InternalControls:ProgressBar Grid.Column="5"
-									  Grid.Row="0"
-									  Minimum="0" Value="50" Maximum="100"
-									  IsIndeterminate="{x:Null}"
-									  Margin="15"/>
-		<InternalControls:ProgressBar Grid.Column="5"
-									  Grid.Row="1"
-									  Grid.RowSpan="2"
-									  Orientation="Vertical"
-									  Minimum="0" Value="50" Maximum="100"
-									  IsIndeterminate="{x:Null}"
-									  Margin="15"/>
+		<Controls:ProgressBar Grid.Column="5"
+                              Grid.Row="0"
+                              Minimum="0" Value="50" Maximum="100"
+                              IsIndeterminate="{x:Null}"
+                              Margin="15"/>
+		<Controls:ProgressBar Grid.Column="5"
+                              Grid.Row="1"
+                              Grid.RowSpan="2"
+                              Orientation="Vertical"
+                              Minimum="0" Value="50" Maximum="100"
+                              IsIndeterminate="{x:Null}"
+                              Margin="15"/>
 	</Grid>
-</InternalControls:Window>
+</Controls:Window>
