--- a/Source code/Theme/Themes/Buttons/CheckBox.xaml
+++ b/Source code/Theme/Themes/Buttons/CheckBox.xaml
@@ -1,26 +1,26 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-					xmlns:Theme="clr-namespace:Elysium.Theme">
+					xmlns:Root="clr-namespace:Elysium.Theme.WPF">
 
 	<ResourceDictionary.MergedDictionaries>
-		<ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+		<ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
 	</ResourceDictionary.MergedDictionaries>
 	
 	<Style TargetType="{x:Type CheckBox}">
 		
 		<Setter Property="Background" Value="{StaticResource Transparent}"/>
 		<Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-		<Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.DefaultThickness}"/>
+		<Setter Property="BorderThickness" Value="{x:Static Root:Parameters.DefaultThickness}"/>
 		<Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-		<Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
-		<Setter Property="FontSize" Value="{x:Static Theme:Parameters.TextFontSize}"/>
+		<Setter Property="FontFamily" Value="{x:Static Root:Parameters.FontFamily}"/>
+		<Setter Property="FontSize" Value="{x:Static Root:Parameters.TextFontSize}"/>
 		<Setter Property="FontWeight" Value="Normal"/>
 
 		<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
 
 		<Setter Property="HorizontalContentAlignment" Value="Left"/>
 		<Setter Property="VerticalContentAlignment" Value="Center"/>
-		<Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
+		<Setter Property="Padding" Value="{x:Static Root:Parameters.BoldPadding}"/>
 
 		<Setter Property="OverridesDefaultStyle" Value="True"/>
 		<Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -42,16 +42,16 @@
 								<Border Background="{TemplateBinding Background}"
 										BorderBrush="{TemplateBinding BorderBrush}"
 										BorderThickness="{TemplateBinding BorderThickness}"
-										Width="{TemplateBinding Theme:Parameters.BulletDecoratorSize}" Height="{TemplateBinding Theme:Parameters.BulletDecoratorSize}">
+										Width="{TemplateBinding Root:Parameters.BulletDecoratorSize}" Height="{TemplateBinding Root:Parameters.BulletDecoratorSize}">
 									<Grid Background="{StaticResource Transparent}">
 										<Path x:Name="CheckBullet"
 											  Fill="{StaticResource Transparent}"
 											  Stroke="{StaticResource ForegroundLowlight}"
-											  StrokeThickness="{x:Static Theme:Parameters.BoldStrokeThickness}"
+											  StrokeThickness="{x:Static Root:Parameters.BoldStrokeThickness}"
 											  Stretch="Fill"
 											  Visibility="Collapsed"
 											  HorizontalAlignment="Center" VerticalAlignment="Center"
-											  Width="{TemplateBinding Theme:Parameters.CheckBoxBulletSize}" Height="{TemplateBinding Theme:Parameters.CheckBoxBulletSize}">
+											  Width="{TemplateBinding Root:Parameters.CheckBoxBulletSize}" Height="{TemplateBinding Root:Parameters.CheckBoxBulletSize}">
 											<Path.Data>
 												<GeometryGroup>
 													<LineGeometry StartPoint="0,3" EndPoint="4,8"/>
@@ -66,7 +66,7 @@
 											  Visibility="Collapsed"
 											  Margin="2"
 											  HorizontalAlignment="Center" VerticalAlignment="Center"
-											  Width="{TemplateBinding Theme:Parameters.CheckBoxBulletSize}" Height="{TemplateBinding Theme:Parameters.CheckBoxBulletSize}">
+											  Width="{TemplateBinding Root:Parameters.CheckBoxBulletSize}" Height="{TemplateBinding Root:Parameters.CheckBoxBulletSize}">
 											<Path.Data>
 												<GeometryGroup>
 													<RectangleGeometry Rect="0,0,1,1"/>
@@ -80,7 +80,7 @@
 											  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
 											  RecognizesAccessKey="True">
 								<ContentPresenter.Margin>
-									<Thickness Left="{x:Static Theme:Parameters.SemiboldPaddingValue}"
+									<Thickness Left="{x:Static Root:Parameters.SemiboldPaddingValue}"
 											   Top="0"
 											   Right="0"
 											   Bottom="0"/>
