--- a/Source code/Theme/Themes/Buttons/CommandButtonsBase.xaml
+++ b/Source code/Theme/Themes/Buttons/CommandButtonsBase.xaml
@@ -1,25 +1,25 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Converters="clr-namespace:Elysium.Theme.Converters"
-                    xmlns:Theme="clr-namespace:Elysium.Theme">
+                    xmlns:Converters="clr-namespace:Elysium.Theme.WPF.Converters"
+                    xmlns:Root="clr-namespace:Elysium.Theme.WPF">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="CommandButtonsBaseStyle" TargetType="{x:Type ButtonBase}">
         
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.SemiboldThickness}"/>
+        <Setter Property="BorderThickness" Value="{x:Static Root:Parameters.SemiboldThickness}"/>
         <Setter Property="Foreground" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
-        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.ContentFontSize}"/>
+        <Setter Property="FontFamily" Value="{x:Static Root:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Root:Parameters.ContentFontSize}"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
 
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
 
-        <Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
+        <Setter Property="Padding" Value="{x:Static Root:Parameters.BoldPadding}"/>
         
         <Setter Property="SnapsToDevicePixels" Value="True"/>
 
