--- a/Source code/Theme/Themes/Buttons/RadioButton.xaml
+++ b/Source code/Theme/Themes/Buttons/RadioButton.xaml
@@ -1,26 +1,26 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Theme="clr-namespace:Elysium.Theme">
+                    xmlns:Root="clr-namespace:Elysium.Theme.WPF">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type RadioButton}">
         
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.DefaultThickness}"/>
+        <Setter Property="BorderThickness" Value="{x:Static Root:Parameters.DefaultThickness}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
-        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.TextFontSize}"/>
+        <Setter Property="FontFamily" Value="{x:Static Root:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Root:Parameters.TextFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
 
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
+        <Setter Property="Padding" Value="{x:Static Root:Parameters.BoldPadding}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -40,7 +40,7 @@
                                          FlowDirection="{TemplateBinding FlowDirection}">
                             <BulletDecorator.Bullet>
                                 <Grid Background="{StaticResource Transparent}"
-                                      Width="{TemplateBinding Theme:Parameters.BulletDecoratorSize}" Height="{TemplateBinding Theme:Parameters.BulletDecoratorSize}">
+                                      Width="{TemplateBinding Root:Parameters.BulletDecoratorSize}" Height="{TemplateBinding Root:Parameters.BulletDecoratorSize}">
                                     <Ellipse Fill="{TemplateBinding Background}"
                                              Stroke="{TemplateBinding BorderBrush}"
                                              StrokeThickness="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness.Left}"/>
@@ -49,7 +49,7 @@
                                              StrokeThickness="0"
                                              Visibility="Collapsed"
                                              HorizontalAlignment="Center" VerticalAlignment="Center"
-                                             Width="{TemplateBinding Theme:Parameters.RadioButtonBulletSize}" Height="{TemplateBinding Theme:Parameters.RadioButtonBulletSize}">
+                                             Width="{TemplateBinding Root:Parameters.RadioButtonBulletSize}" Height="{TemplateBinding Root:Parameters.RadioButtonBulletSize}">
                                     </Ellipse>
                                 </Grid>
                             </BulletDecorator.Bullet>
@@ -57,7 +57,7 @@
                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                               RecognizesAccessKey="True">
                                 <ContentPresenter.Margin>
-                                    <Thickness Left="{x:Static Theme:Parameters.SemiboldPaddingValue}"
+                                    <Thickness Left="{x:Static Root:Parameters.SemiboldPaddingValue}"
                                                Top="0"
                                                Right="0"
                                                Bottom="0"/>
