--- a/Source code/Theme/Themes/Menus/MenuItem.xaml
+++ b/Source code/Theme/Themes/Menus/MenuItem.xaml
@@ -1,17 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Theme="clr-namespace:Elysium.Theme"
-                    xmlns:Converters="clr-namespace:Elysium.Theme.Converters">
+                    xmlns:Root="clr-namespace:Elysium.Theme.WPF"
+                    xmlns:Converters="clr-namespace:Elysium.Theme.WPF.Converters">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="{x:Static MenuItem.SeparatorStyleKey}" TargetType="{x:Type Separator}">
         
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundHighlight}"/>
-        <Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.DefaultThickness}"/>
+        <Setter Property="BorderThickness" Value="{x:Static Root:Parameters.DefaultThickness}"/>
         
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -20,9 +20,9 @@
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Padding">
             <Setter.Value>
-                <Thickness Left="{x:Static Theme:Parameters.SemiboldPaddingValue}"
+                <Thickness Left="{x:Static Root:Parameters.SemiboldPaddingValue}"
                            Top="0"
-                           Right="{x:Static Theme:Parameters.SemiboldPaddingValue}"
+                           Right="{x:Static Root:Parameters.SemiboldPaddingValue}"
                            Bottom="0"/>
             </Setter.Value>
         </Setter>
@@ -73,11 +73,11 @@
                       Grid.Column="0"
                       Fill="{StaticResource Transparent}"
                       Stroke="{StaticResource ForegroundLowlight}"
-                      StrokeThickness="{x:Static Theme:Parameters.BoldStrokeThickness}"
+                      StrokeThickness="{x:Static Root:Parameters.BoldStrokeThickness}"
                       Stretch="Uniform"
                       Visibility="Collapsed"
                       HorizontalAlignment="Center" VerticalAlignment="Center"
-                      Width="{TemplateBinding Theme:Parameters.SubmenuItemBulletSize}" Height="{TemplateBinding Theme:Parameters.SubmenuItemBulletSize}">
+                      Width="{TemplateBinding Root:Parameters.SubmenuItemBulletSize}" Height="{TemplateBinding Root:Parameters.SubmenuItemBulletSize}">
                     <Path.Data>
                         <GeometryGroup>
                             <LineGeometry StartPoint="0,3" EndPoint="4,8"/>
@@ -98,9 +98,9 @@
                                   HorizontalAlignment="Left"
                                   VerticalAlignment="Center">
                     <ContentPresenter.Margin>
-                        <Thickness Left="{x:Static Theme:Parameters.BoldPaddingValue}"
+                        <Thickness Left="{x:Static Root:Parameters.BoldPaddingValue}"
                                    Top="0"
-                                   Right="{x:Static Theme:Parameters.BoldPaddingValue}"
+                                   Right="{x:Static Root:Parameters.BoldPaddingValue}"
                                    Bottom="0"/>
                     </ContentPresenter.Margin>
                 </ContentPresenter>
@@ -154,9 +154,9 @@
                                   HorizontalAlignment="Left"
                                   VerticalAlignment="Center">
                     <ContentPresenter.Margin>
-                        <Thickness Left="{x:Static Theme:Parameters.BoldPaddingValue}"
+                        <Thickness Left="{x:Static Root:Parameters.BoldPaddingValue}"
                                    Top="0"
-                                   Right="{x:Static Theme:Parameters.BoldPaddingValue}"
+                                   Right="{x:Static Root:Parameters.BoldPaddingValue}"
                                    Bottom="0"/>
                     </ContentPresenter.Margin>
                 </ContentPresenter>
@@ -164,10 +164,10 @@
                          Fill="{StaticResource ForegroundMiddlelight}"
                          StrokeThickness="0"
                          Stretch="Uniform"
-                         Margin="{TemplateBinding Theme:Parameters.SubmenuHeaderArrowMargin}"
+                         Margin="{TemplateBinding Root:Parameters.SubmenuHeaderArrowMargin}"
                          HorizontalAlignment="Right" VerticalAlignment="Center"
-                         Width="{TemplateBinding Theme:Parameters.SubmenuHeaderArrowSize}"
-                         Height="{TemplateBinding Theme:Parameters.SubmenuHeaderArrowSize}">
+                         Width="{TemplateBinding Root:Parameters.SubmenuHeaderArrowSize}"
+                         Height="{TemplateBinding Root:Parameters.SubmenuHeaderArrowSize}">
                     <Polygon.Points>
                         <PointCollection>
                             <Point X="0" Y="0"/>
