--- a/Source code/Theme/Themes/Ranges/ProgressBar.xaml
+++ b/Source code/Theme/Themes/Ranges/ProgressBar.xaml
@@ -1,13 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:InternalControls="clr-namespace:Elysium.Theme.Controls"
-                    xmlns:Theme="clr-namespace:Elysium.Theme">
+                    xmlns:Controls="clr-namespace:Elysium.Theme.WPF.Controls"
+                    xmlns:Root="clr-namespace:Elysium.Theme.WPF">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <ControlTemplate x:Key="HorizontalProgressBarTemplate" TargetType="{x:Type InternalControls:ProgressBar}">
+    <ControlTemplate x:Key="HorizontalProgressBarTemplate" TargetType="{x:Type Controls:ProgressBar}">
 
         <Grid x:Name="PART_Track"
               Background="{TemplateBinding Background}"
@@ -27,24 +27,24 @@
                     Visibility="Collapsed">
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}" Canvas.Top="0"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
             </Canvas>
         </Grid>
 
@@ -75,7 +75,7 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
-    <ControlTemplate x:Key="VerticalProgressBarTemplate" TargetType="{x:Type InternalControls:ProgressBar}">
+    <ControlTemplate x:Key="VerticalProgressBarTemplate" TargetType="{x:Type Controls:ProgressBar}">
 
         <Grid x:Name="PART_Track"
               Background="{TemplateBinding Background}"
@@ -95,24 +95,24 @@
                     Visibility="Collapsed">
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="0" Canvas.Top="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="0" Canvas.Top="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="0" Canvas.Top="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="0" Canvas.Top="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="0" Canvas.Top="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="0" Canvas.Top="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="0" Canvas.Top="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="0" Canvas.Top="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
                 <Ellipse Fill="{StaticResource Accent}"
                          StrokeThickness="0"
-                         Canvas.Left="0" Canvas.Top="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementStartPosition}"
-                         Width="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Theme:Parameters.ProgressBarLoadingElementSize}"/>
+                         Canvas.Left="0" Canvas.Top="{TemplateBinding Root:Parameters.ProgressBarLoadingElementStartPosition}"
+                         Width="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}" Height="{TemplateBinding Root:Parameters.ProgressBarLoadingElementSize}"/>
             </Canvas>
         </Grid>
 
@@ -143,14 +143,14 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
-    <Style x:Key="{x:Type InternalControls:ProgressBar}" TargetType="{x:Type InternalControls:ProgressBar}">
+    <Style x:Key="{x:Type Controls:ProgressBar}" TargetType="{x:Type Controls:ProgressBar}">
 
         <Setter Property="Background" Value="{StaticResource ForegroundHighlight}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
-        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.TextFontSize}"/>
+        <Setter Property="FontFamily" Value="{x:Static Root:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Root:Parameters.TextFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
         
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
