--- a/Source code/Theme/Themes/Ranges/Slider.xaml
+++ b/Source code/Theme/Themes/Ranges/Slider.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Theme="clr-namespace:Elysium.Theme">
+                    xmlns:Root="clr-namespace:Elysium.Theme.WPF">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="SliderRepeatButtonStyle" TargetType="{x:Type RepeatButton}">
@@ -95,13 +95,13 @@
             <TickBar Grid.Row="0"
                      Fill="{TemplateBinding BorderBrush}"
                      Placement="Top"
-                     Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                     Height="{TemplateBinding Root:Parameters.SliderTrackSize}"
                      Visibility="Collapsed"/>
             <Rectangle x:Name="PART_SelectionRange"
                        Grid.Row="1"
                        Fill="{StaticResource Foreground}"
                        StrokeThickness="0"
-                       Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                       Height="{TemplateBinding Root:Parameters.SliderTrackSize}"
                        Visibility="Hidden"/>
             <Track x:Name="PART_Track"
                    Grid.Row="1"
@@ -109,18 +109,18 @@
                 <Track.DecreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.DecreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
-                                  Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                                  Height="{TemplateBinding Root:Parameters.SliderTrackSize}"
                                   Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
                     <Thumb IsEnabled="{TemplateBinding IsEnabled}"
-                           Width="{TemplateBinding Theme:Parameters.SliderThumbThickness}"
+                           Width="{TemplateBinding Root:Parameters.SliderThumbThickness}"
                            Height="{TemplateBinding Height}"
                            Style="{StaticResource SliderThumbStyle}">
                         <Thumb.BorderThickness>
                             <Thickness Left="0"
                                        Top="0"
-                                       Right="{x:Static Theme:Parameters.DefaultStrokeThickness}"
+                                       Right="{x:Static Root:Parameters.DefaultStrokeThickness}"
                                        Bottom="0"/>
                         </Thumb.BorderThickness>
                     </Thumb>
@@ -128,14 +128,14 @@
                 <Track.IncreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.IncreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
-                                  Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                                  Height="{TemplateBinding Root:Parameters.SliderTrackSize}"
                                   Style="{StaticResource SliderRepeatButtonStyle}"/>
                 </Track.IncreaseRepeatButton>
             </Track>
             <TickBar Grid.Row="2"
                      Fill="{TemplateBinding BorderBrush}"
                      Placement="Bottom"
-                     Height="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                     Height="{TemplateBinding Root:Parameters.SliderTrackSize}"
                      Visibility="Collapsed"/>
         </Grid>
     </ControlTemplate>
@@ -151,13 +151,13 @@
             <TickBar Grid.Column="0"
                      Fill="{TemplateBinding BorderBrush}"
                      Placement="Top"
-                     Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                     Width="{TemplateBinding Root:Parameters.SliderTrackSize}"
                      Visibility="Collapsed"/>
             <Rectangle x:Name="PART_SelectionRange"
                        Grid.Column="1"
                        Fill="{StaticResource Foreground}"
                        StrokeThickness="0"
-                       Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                       Width="{TemplateBinding Root:Parameters.SliderTrackSize}"
                        Visibility="Hidden"/>
             <Track x:Name="PART_Track"
                    Grid.Column="1"
@@ -165,17 +165,17 @@
                 <Track.DecreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.DecreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
-                                  Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                                  Width="{TemplateBinding Root:Parameters.SliderTrackSize}"
                                   Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
                     <Thumb IsEnabled="{TemplateBinding IsEnabled}"
                            Width="{TemplateBinding Width}"
-                           Height="{TemplateBinding Theme:Parameters.SliderThumbThickness}"
+                           Height="{TemplateBinding Root:Parameters.SliderThumbThickness}"
                            Style="{StaticResource SliderThumbStyle}">
                         <Thumb.BorderThickness>
                             <Thickness Left="0"
-                                       Top="{x:Static Theme:Parameters.DefaultStrokeThickness}"
+                                       Top="{x:Static Root:Parameters.DefaultStrokeThickness}"
                                        Right="0"
                                        Bottom="0"/>
                         </Thumb.BorderThickness>
@@ -184,14 +184,14 @@
                 <Track.IncreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.IncreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
-                                  Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                                  Width="{TemplateBinding Root:Parameters.SliderTrackSize}"
                                   Style="{StaticResource SliderRepeatButtonStyle}"/>
                 </Track.IncreaseRepeatButton>
             </Track>
             <TickBar Grid.Column="2"
                      Fill="{TemplateBinding BorderBrush}"
                      Placement="Bottom"
-                     Width="{TemplateBinding Theme:Parameters.SliderTrackSize}"
+                     Width="{TemplateBinding Root:Parameters.SliderTrackSize}"
                      Visibility="Collapsed"/>
         </Grid>
     </ControlTemplate>
@@ -202,8 +202,8 @@
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
-        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.TextFontSize}"/>
+        <Setter Property="FontFamily" Value="{x:Static Root:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Root:Parameters.TextFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
