--- a/Source code/Theme/Themes/Scrolls/ScrollViewer.xaml
+++ b/Source code/Theme/Themes/Scrolls/ScrollViewer.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Theme="clr-namespace:Elysium.Theme">
+                    xmlns:Root="clr-namespace:Elysium.Theme.WPF">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type ScrollViewer}">
@@ -12,8 +12,8 @@
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
-        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.TextFontSize}"/>
+        <Setter Property="FontFamily" Value="{x:Static Root:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Root:Parameters.TextFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -55,7 +55,7 @@
                                        Stretch="Fill"
                                        HorizontalAlignment="Stretch"
                                        VerticalAlignment="Bottom"
-                                       Height="{TemplateBinding Theme:Parameters.ScrollViewerShadowSize}"
+                                       Height="{TemplateBinding Root:Parameters.ScrollViewerShadowSize}"
                                        Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}">
                                 <Rectangle.Fill>
                                     <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
@@ -69,7 +69,7 @@
                                        Stretch="Fill"
                                        HorizontalAlignment="Right"
                                        VerticalAlignment="Stretch"
-                                       Width="{TemplateBinding Theme:Parameters.ScrollViewerShadowSize}"
+                                       Width="{TemplateBinding Root:Parameters.ScrollViewerShadowSize}"
                                        Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}">
                                 <Rectangle.Fill>
                                     <LinearGradientBrush StartPoint="0,0.5" EndPoint="1,0.5">
