--- a/Source code/Theme/Themes/Selectors/ComboBox.xaml
+++ b/Source code/Theme/Themes/Selectors/ComboBox.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Theme="clr-namespace:Elysium.Theme">
+                    xmlns:Root="clr-namespace:Elysium.Theme.WPF">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/Scrolls/ScrollBar.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Scrolls/ScrollBar.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
     <Style x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">        
@@ -18,10 +18,10 @@
                         <Polygon Fill="{StaticResource ForegroundMiddlelight}"
                                  StrokeThickness="0"
                                  Stretch="Uniform"
-                                 Margin="{TemplateBinding Theme:Parameters.ComboBoxArrowMargin}"
+                                 Margin="{TemplateBinding Root:Parameters.ComboBoxArrowMargin}"
                                  HorizontalAlignment="Right" VerticalAlignment="Center"
-                                 Width="{TemplateBinding Theme:Parameters.ComboBoxArrowSize}"
-                                 Height="{TemplateBinding Theme:Parameters.ComboBoxArrowSize}">
+                                 Width="{TemplateBinding Root:Parameters.ComboBoxArrowSize}"
+                                 Height="{TemplateBinding Root:Parameters.ComboBoxArrowSize}">
                             <Polygon.Points>
                                 <PointCollection>
                                     <Point X="0" Y="0"/>
@@ -70,10 +70,10 @@
 
         <Setter Property="Background" Value="{StaticResource Background}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{x:Static Theme:Parameters.DefaultThickness}"/>
+        <Setter Property="BorderThickness" Value="{x:Static Root:Parameters.DefaultThickness}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
-        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.ContentFontSize}"/>
+        <Setter Property="FontFamily" Value="{x:Static Root:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Root:Parameters.ContentFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
@@ -87,7 +87,7 @@
 
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
+        <Setter Property="Padding" Value="{x:Static Root:Parameters.BoldPadding}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -137,10 +137,10 @@
                                           Background="{TemplateBinding Background}"
                                           BorderThickness="0"
                                           IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
-                                          Theme:Parameters.ComboBoxArrowSize="{TemplateBinding Theme:Parameters.ComboBoxArrowSize}"
-                                          Theme:Parameters.ComboBoxArrowMargin="{TemplateBinding Theme:Parameters.ComboBoxArrowMargin}"
+                                          Root:Parameters.ComboBoxArrowSize="{TemplateBinding Root:Parameters.ComboBoxArrowSize}"
+                                          Root:Parameters.ComboBoxArrowMargin="{TemplateBinding Root:Parameters.ComboBoxArrowMargin}"
                                           Style="{StaticResource ComboBoxToggleButton}"
-                                          Width="{TemplateBinding Theme:Parameters.ComboBoxButtonSize}"/>
+                                          Width="{TemplateBinding Root:Parameters.ComboBoxButtonSize}"/>
                             <ContentPresenter x:Name="ContentPresenter"
                                               Content="{TemplateBinding SelectionBoxItem}"
                                               ContentStringFormat="{TemplateBinding SelectionBoxItemStringFormat}"
