--- a/Source code/Theme/Themes/Selectors/ListBox.xaml
+++ b/Source code/Theme/Themes/Selectors/ListBox.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Theme="clr-namespace:Elysium.Theme">
+                    xmlns:Root="clr-namespace:Elysium.Theme.WPF">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type ListBox}">
@@ -12,8 +12,8 @@
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{x:Static Theme:Parameters.FontFamily}"/>
-        <Setter Property="FontSize" Value="{x:Static Theme:Parameters.ContentFontSize}"/>
+        <Setter Property="FontFamily" Value="{x:Static Root:Parameters.FontFamily}"/>
+        <Setter Property="FontSize" Value="{x:Static Root:Parameters.ContentFontSize}"/>
         <Setter Property="FontWeight" Value="Normal"/>
         
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -27,7 +27,7 @@
 
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="{x:Static Theme:Parameters.BoldPadding}"/>
+        <Setter Property="Padding" Value="{x:Static Root:Parameters.BoldPadding}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
