- Added base infrastructure for plug-in system

--- a/Source code/Platform/App.xaml
+++ b/Source code/Platform/App.xaml
@@ -5,7 +5,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Theme;component/Themes/Generic.xaml"/>
+                <ResourceDictionary Source="/Elysium.Theme.WPF;component/Themes/Generic.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
