--- a/Source code/Theme.Test/MainWindow.xaml
+++ b/Source code/Theme.Test/MainWindow.xaml
@@ -1,11 +1,12 @@
 ﻿<Controls:Window x:Class="Elysium.Theme.WPF.Test.MainWindow"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:Controls="clr-namespace:Elysium.Theme.WPF.Controls;assembly=Elysium.Theme.WPF"
-                 Title="MainWindow"
-                 Background="{StaticResource Background}"
-                 MouseLeftButtonDown="WindowMouseLeftButtonDown"
-                 Width="1000" Height="600">
+				 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+				 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				 xmlns:Theme="clr-namespace:Elysium.Theme.WPF;assembly=Elysium.Theme.WPF"
+				 xmlns:Controls="clr-namespace:Elysium.Theme.WPF.Controls;assembly=Elysium.Theme.WPF"
+				 Title="MainWindow"
+				 Background="{StaticResource Background}"
+				 MouseLeftButtonDown="WindowMouseLeftButtonDown"
+				 Width="1000" Height="600">
 	<Grid Background="{StaticResource Transparent}">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="125"/>
@@ -22,12 +23,13 @@
 			<RowDefinition Height="30"/>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="120"/>
 		</Grid.RowDefinitions>
 		<Grid.ContextMenu>
 			<ContextMenu>
 				<MenuItem Header="Context menu item 1">
 					<MenuItem.Icon>
-						<Image Source="pack://application:,,,/Theme;component/Icons/Close.png"
+						<Image Source="pack://application:,,,/Elysium.Theme.WPF;component/Icons/Close.png"
 							   Stretch="None"/>
 					</MenuItem.Icon>
 				</MenuItem>
@@ -58,9 +60,9 @@
 					  Margin="15"
 					  Content="ToggleButton"/>
 		<Controls:CommandButton Grid.Column="0"
-                                Grid.Row="3"
-                                HorizontalAlignment="Center"
-                                Width="30" Height="30">
+								Grid.Row="3"
+								HorizontalAlignment="Center"
+								Width="30" Height="30">
 			<Grid Background="Transparent">
 				<Path Data="M 7,0 L 7,14 M 0,7 L 14,7"
 					  Stroke="Black"
@@ -96,7 +98,20 @@
 		<TextBlock Grid.Column="1"
 				   Grid.Row="3"
 				   Margin="15"
-				   Text="TextBlock"/>
+				   Text="TextBlock"
+				   HorizontalAlignment="Center"
+				   VerticalAlignment="Center"/>
+		<TabControl Grid.Column="1"
+					Grid.ColumnSpan="2"
+					Grid.Row="4"
+					Grid.RowSpan="3"
+					BorderThickness="{x:Static Theme:Parameters.DefaultThickness}"
+					TabStripPlacement="Top"
+					Margin="10">
+			<TabItem Header="TabItem 1"/>
+			<TabItem Header="TabItem 2"/>
+			<TabItem Header="TabItem 3"/>
+		</TabControl>
 		<ComboBox Grid.Column="2"
 				  Grid.Row="0"
 				  MaxDropDownHeight="125"
@@ -135,6 +150,17 @@
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</TextBlock>
 		</ScrollViewer>
+		<TabControl Grid.Column="3"
+					Grid.ColumnSpan="2"
+					Grid.Row="4"
+					Grid.RowSpan="3"
+					BorderThickness="{x:Static Theme:Parameters.DefaultThickness}"
+					TabStripPlacement="Left"
+					Margin="10">
+			<TabItem Header="TabItem 1"/>
+			<TabItem Header="TabItem 2"/>
+			<TabItem Header="TabItem 3"/>
+		</TabControl>
 		<Slider Grid.Column="4"
 				Grid.Row="0"
 				Orientation="Horizontal"
@@ -148,16 +174,16 @@
 				Margin="15"
 				HorizontalAlignment="Center"/>
 		<Controls:ProgressBar Grid.Column="5"
-                              Grid.Row="0"
-                              Minimum="0" Value="50" Maximum="100"
-                              IsIndeterminate="{x:Null}"
-                              Margin="15"/>
+							  Grid.Row="0"
+							  Minimum="0" Value="50" Maximum="100"
+							  IsIndeterminate="{x:Null}"
+							  Margin="15"/>
 		<Controls:ProgressBar Grid.Column="5"
-                              Grid.Row="1"
-                              Grid.RowSpan="2"
-                              Orientation="Vertical"
-                              Minimum="0" Value="50" Maximum="100"
-                              IsIndeterminate="{x:Null}"
-                              Margin="15"/>
+							  Grid.Row="1"
+							  Grid.RowSpan="2"
+							  Orientation="Vertical"
+							  Minimum="0" Value="50" Maximum="100"
+							  IsIndeterminate="{x:Null}"
+							  Margin="15"/>
 	</Grid>
 </Controls:Window>
